# LayerZero

./: .gitignore  LICENSE  README.md  gap.md  layerzero_low_level_spec.md  layerzero_spec.md  layerzero_status.md  pyproject.toml  scenarios.md  tasks.md  test_plan.md
benchmarks/dispatch/: __init__.py  bench_cache_performance.py  bench_circuit_breaker.py  bench_dispatch_overhead.py  run_benchmarks.py
benchmarks/dispatch/results/: quick_run.json
docs/: flashinfer_analysis_and_layerzero_fix.md  gpu_kernel_dispatch_research.md  kernel_dispatch_implementation_plan.md  kernel_dispatch_test_scenarios.md
docs/dispatch/: README.md  api_reference.md  architecture.md  configuration.md  dispatch_modes.md  examples.md  performance.md
src/layerzero/: __init__.py  device.py  enums.py  exceptions.py  reasons.py
src/layerzero/_solve/: __init__.py  dispatch_table.py  solver.py
src/layerzero/api/: __init__.py  config.py  inspection.py  operations.py  system.py
src/layerzero/backends/: __init__.py  base.py
src/layerzero/benchmark/: __init__.py  comparison.py  harness.py  perfdb_integration.py  stats.py
src/layerzero/capabilities/: __init__.py  constraints.py  hash.py  schema.py  (+1 more)
tests/: __init__.py  conftest.py  test_infrastructure.py
tests/correctness/: __init__.py  reference.py  test_numerical_correctness.py
tests/distributed/: __init__.py  test_distributed_consistency.py
tests/fixtures/: __init__.py  devices.py  models.py  tensors.py
tests/fuzz/: __init__.py  fuzz_context.py  fuzz_policy.py  fuzz_validation.py  test_fuzz_harness.py
tests/integration/: __init__.py  conftest.py  test_e2e.py  test_e2e_attention.py  test_e2e_patching.py  test_e2e_selection.py  test_hf_diffusers.py  test_hf_transformers.py  test_pytorch_integration.py  test_tokenization_pipeline.py
tests/property/: __init__.py  test_hypothesis.py
tests/stress/: __init__.py  test_memory_leaks.py  test_selection_stress.py
tests/unit/: __init__.py  test_backend_isolation.py  test_benchmark.py  test_constraint_validation.py  test_cuda_graph_safety.py  test_device.py  test_enums.py  test_error_handling.py  test_exceptions.py  test_fallback.py  test_gpu_generation.py  test_reasons.py
(+311 files in other folders)
